--- a/index.html
+++ b/index.html
@@ -91,22 +91,34 @@
                 <div class="swiper dv-banner-swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img src="assets/images/bed5.png" class="img-fluid" loading="lazy" alt="ideal">
+                            <a href="products.html">
+                                <img src="assets/images/bed5.png" class="img-fluid" loading="lazy" alt="ideal">
+                            </a>
                         </div>
                         <div class="swiper-slide">
-                            <img src="assets/images/bed6.png" class="img-fluid" loading="lazy" alt="ideal">
+                            <a href="products.html">
+                                <img src="assets/images/bed6.png" class="img-fluid" loading="lazy" alt="ideal">
+                            </a>
                         </div>
                         <div class="swiper-slide">
-                            <img src="assets/images/bed9.png" class="img-fluid" loading="lazy" alt="ideal">
+                            <a href="products.html">
+                                <img src="assets/images/bed9.png" class="img-fluid" loading="lazy" alt="ideal">
+                            </a>
                         </div>
                         <div class="swiper-slide">
-                            <img src="assets/images/bed5.png" class="img-fluid" loading="lazy" alt="ideal">
+                            <a href="products.html">
+                                <img src="assets/images/bed5.png" class="img-fluid" loading="lazy" alt="ideal">
+                            </a>
                         </div>
                         <div class="swiper-slide">
-                            <img src="assets/images/bed6.png" class="img-fluid" loading="lazy" alt="ideal">
+                            <a href="products.html">
+                                <img src="assets/images/bed6.png" class="img-fluid" loading="lazy" alt="ideal">
+                            </a>
                         </div>
                         <div class="swiper-slide">
-                            <img src="assets/images/bed9.png" class="img-fluid" loading="lazy" alt="ideal">
+                            <a href="products.html">
+                                <img src="assets/images/bed9.png" class="img-fluid" loading="lazy" alt="ideal">
+                            </a>
                         </div>
                     </div>
                     <div class="dv-top-swiper-items">
@@ -1137,10 +1149,12 @@
                                 <span>لینک های مهم</span>
                             </li>
                             <li class="dv-footer-links-list-item mb-3">
-                                <a class="dv-footer-links-list-link" target="_blank" href="contact-us.html">تماس با ما</a>
+                                <a class="dv-footer-links-list-link" target="_blank" href="contact-us.html">تماس با
+                                    ما</a>
                             </li>
                             <li class="dv-footer-links-list-item mb-3">
-                                <a class="dv-footer-links-list-link" target="_blank" href="contact-us.html">درباره ما</a>
+                                <a class="dv-footer-links-list-link" target="_blank" href="contact-us.html">درباره
+                                    ما</a>
                             </li>
                             <li class="dv-footer-links-list-item mb-3">
                                 <a class="dv-footer-links-list-link" target="_blank" href="cart.html">سبد خرید</a>
