--- a/interest.html
+++ b/interest.html
@@ -17,7 +17,7 @@
 <header>
     <nav class="navbar navbar-expand-xl navbar-light bg-light dv-custom-navbar">
         <div class="container">
-            <a class="navbar-brand" href="#">Ideal</a>
+            <a class="navbar-brand" href="index.html">Ideal</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +46,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">ارتباط با ما</a>
+                        <a class="nav-link" href="contact-us.html">ارتباط با ما</a>
                     </li>
                 </ul>
                 <div class="d-flex flex-column flex-sm-row align-items-sm-center">
@@ -82,7 +82,6 @@
         </div>
     </nav>
 </header>
-<!---->
 
 <main>
     <div class="dv-blog-info-top-bg-color"></div>
@@ -93,17 +92,21 @@
             </div>
         </div>
     </section>
-    <section id="products" class="pt-5 pt-sm-0">
+    <section id="products" class="pt-5 pt-sm-0 pb-5">
         <div class="container">
             <div class="row gy-5">
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                     <a href="product-info.html">
                         <div class="card dv-card-cart">
-                            <div class="dv-image-cart">
-                                <img src="assets/images/chair3-min.png" class="img-fluid" alt="ideal">
-                            </div>
+                            <a href="product-info.html">
+                                <div class="dv-image-cart">
+                                    <img src="assets/images/chair3-min.png" class="img-fluid" alt="ideal">
+                                </div>
+                            </a>
                             <div class="card-body text-center">
-                                <h2 class="card-title dv-card-title">مبل راحتی مدل45</h2>
+                                <a href="product-info.html">
+                                    <h2 class="card-title dv-card-title">مبل راحتی مدل45</h2>
+                                </a>
                                 <div class="d-flex justify-content-center mb-3 mt-1">
                                     <span class="dv-Circle-Purple"></span>
                                     <span class="dv-Circle-pink"></span>
@@ -124,11 +127,15 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                     <a href="product-info.html">
                         <div class="card dv-card-cart">
-                            <div class="dv-image-cart">
-                                <img src="assets/images/chair3-min.png" class="img-fluid" alt="ideal">
-                            </div>
+                            <a href="product-info.html">
+                                <div class="dv-image-cart">
+                                    <img src="assets/images/chair3-min.png" class="img-fluid" alt="ideal">
+                                </div>
+                            </a>
                             <div class="card-body text-center">
-                                <h2 class="card-title dv-card-title">مبل راحتی مدل45</h2>
+                                <a href="product-info.html">
+                                    <h2 class="card-title dv-card-title">مبل راحتی مدل45</h2>
+                                </a>
                                 <div class="d-flex justify-content-center mb-3 mt-1">
                                     <span class="dv-Circle-Purple"></span>
                                     <span class="dv-Circle-pink"></span>
@@ -149,61 +156,15 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                     <a href="product-info.html">
                         <div class="card dv-card-cart">
-                            <div class="dv-image-cart">
-                                <img src="assets/images/chair3-min.png" class="img-fluid" alt="ideal">
-                            </div>
-                            <div class="card-body text-center">
-                                <h2 class="card-title dv-card-title">مبل راحتی مدل45</h2>
-                                <div class="d-flex justify-content-center mb-3 mt-1">
-                                    <span class="dv-Circle-Purple"></span>
-                                    <span class="dv-Circle-pink"></span>
-                                    <span class="dv-Circle-orange"></span>
+                            <a href="product-info.html">
+                                <div class="dv-image-cart">
+                                    <img src="assets/images/chair3-min.png" class="img-fluid" alt="ideal">
                                 </div>
-                                <span class="ps-2 dv-original-price"> <del>تومان <span
-                                        class="">500.000</span></del></span>
-                                <span class="pe-2 discounted-price">تومان <span class="">260.000</span></span>
-                                <button type="button" class="mt-3 btn w-100 dv-Product-filters d-flex align-items-center justify-content-center"
-                                        data-bs-toggle="modal" data-bs-target="#filterModal">
-                                    <span class="icon-trash ps-3"></span>
-                                    <span>حذف از علاقه مندی</span>
-                                </button>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                    <a href="product-info.html">
-                        <div class="card dv-card-cart">
-                            <div class="dv-image-cart">
-                                <img src="assets/images/chair3-min.png" class="img-fluid" alt="ideal">
-                            </div>
+                            </a>
                             <div class="card-body text-center">
-                                <h2 class="card-title dv-card-title">مبل راحتی مدل45</h2>
-                                <div class="d-flex justify-content-center mb-3 mt-1">
-                                    <span class="dv-Circle-Purple"></span>
-                                    <span class="dv-Circle-pink"></span>
-                                    <span class="dv-Circle-orange"></span>
-                                </div>
-                                <span class="ps-2 dv-original-price"> <del>تومان <span
-                                        class="">500.000</span></del></span>
-                                <span class="pe-2 discounted-price">تومان <span class="">260.000</span></span>
-                                <button type="button" class="mt-3 btn w-100 dv-Product-filters d-flex align-items-center justify-content-center"
-                                        data-bs-toggle="modal" data-bs-target="#filterModal">
-                                    <span class="icon-trash ps-3"></span>
-                                    <span>حذف از علاقه مندی</span>
-                                </button>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                    <a href="product-info.html">
-                        <div class="card dv-card-cart">
-                            <div class="dv-image-cart">
-                                <img src="assets/images/chair3-min.png" class="img-fluid" alt="ideal">
-                            </div>
-                            <div class="card-body text-center">
-                                <h2 class="card-title dv-card-title">مبل راحتی مدل45</h2>
+                                <a href="product-info.html">
+                                    <h2 class="card-title dv-card-title">مبل راحتی مدل45</h2>
+                                </a>
                                 <div class="d-flex justify-content-center mb-3 mt-1">
                                     <span class="dv-Circle-Purple"></span>
                                     <span class="dv-Circle-pink"></span>
