--- a/product-info.html
+++ b/product-info.html
@@ -46,7 +46,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">ارتباط با ما</a>
+                        <a class="nav-link" href="contact-us.html">ارتباط با ما</a>
                     </li>
                 </ul>
                 <div class="d-flex flex-column flex-sm-row align-items-sm-center">
@@ -82,7 +82,6 @@
         </div>
     </nav>
 </header>
-<!---->
 
 <!--section-body-->
 <main>
