--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
 <header>
     <nav class="navbar navbar-expand-xl navbar-light bg-light dv-custom-navbar">
         <div class="container">
-            <a class="navbar-brand" href="#">Ideal</a>
+            <a class="navbar-brand" href="index.html">Ideal</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +46,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">ارتباط با ما</a>
+                        <a class="nav-link" href="contact-us.html">ارتباط با ما</a>
                     </li>
                 </ul>
                 <div class="d-flex flex-column flex-sm-row align-items-sm-center">
@@ -82,7 +82,6 @@
         </div>
     </nav>
 </header>
-<!---->
 
 <main>
     <div class="dv-blog-info-top-bg-color"></div>
