--- a/contact-us.html
+++ b/contact-us.html
@@ -412,9 +412,8 @@
 
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/bootstrap.bundle.min.js"></script>
-<script src="assets/js/leaflet.js"
-        integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-        crossorigin=""></script>
+<script src="assets/js/swiper.js"></script>
+<script src="assets/js/leaflet.js"></script>
 <script src="assets/js/index.min.js"></script>
 
 <script>
